--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
     "jest": "^24.7.1",
+    "js-yaml": "^3.13.1",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.30.0",
