--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
-    "long": "^4.0.0"
+    "@babel/generator": "^7.4.4",
+    "@babel/template": "^7.4.4",
+    "@babel/types": "^7.4.4",
+    "long": "^4.0.0",
+    "source-map": "^0.7.3"
   }
 }
