--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   "author": "hsiaosiyuan0@outlook.com",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
-    "babel-cli": "^6.26.0",
+    "@types/webpack": "^4.4.31",
     "babel-loader": "^8.0.5",
     "jest": "^24.7.1",
     "js-yaml": "^3.13.1",
+    "memory-fs": "^0.4.1",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
-    "webpack": "^4.30.0",
+    "webpack": "^4.31.0",
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
